Removed buggy wrapping of grid and clue list

--- a/client/src/pages/Puzzle/Puzzle.scss
+++ b/client/src/pages/Puzzle/Puzzle.scss
@@ -13,9 +13,9 @@
 .playArea {
   padding: 10px;
   display: flex;
+  flex-wrap: wrap;
   position: relative;
   justify-content: center;
-  //flex-wrap: wrap;
 }
 
 .currentClue {
@@ -25,21 +25,21 @@
 .gridContainer,
 .cluesContainer {
   //width: 49%;
-  height: 100%;
+  //height: 100%;
 }
 
 .gridContainer {
   position: sticky;
   top: 56px;
   right: 24px;
-  padding-right: 20px;
+  padding: 20px;
 }
 
 .cluesContainer {
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  overscroll-behavior: contain;
+  //overscroll-behavior: contain;
 }
 
 .headerContainer {
